# magic-const-rewriter

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md
example/: CMakeLists.txt  magic.c  magic.h  main.c
src/: MagicConstRewriter.csproj  Program.cs
